[package]
name = "retro-game-replicas"
version = "1.1.4"
description = "Universal Retro Arcade — BiosSystem Open Source Community"
authors = ["BiosSystem Open Source Community"]
license = "MIT"
repository = "https://github.com/BiosSystem/retro-game-replicas"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "retro_game_replicas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
